# geoxplain-aurora-adapter

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: publish.yml
diagnostics/: README.md  _suite_common.py  aggregate.py  completeness_suite.py  randomization.py  rise_convergence.py
docs/: installation.md
geoxplain_aurora_adapter/: __init__.py  __main__.py  cli.py
geoxplain_aurora_adapter/api/: __init__.py  dispatch.py  listener.py  methods.py  timeparse.py
geoxplain_aurora_adapter/engine/: __init__.py  _common.py  compute.py  data.py  model.py  overlay_compute.py  parallel.py  progress.py  rollout.py
geoxplain_aurora_adapter/engine/runners/: __init__.py  ig.py  rise.py  saliency.py  vit_cx.py
geoxplain_aurora_adapter/engine/xia_methods/: __init__.py  ig.py  rise.py  saliency.py  smoothgrad.py  vit_cx.py
geoxplain_aurora_adapter/remote/: __init__.py  __main__.py  cli.py  client.py  inproc.py  local_overlay.py  overlay_client.py  progress_log.py  progress_mirror.py  protocol.py  result_fetch.py  retention.py  sbatch_config.py  sbatch_oneshot.py  sbatch_persistent.py  server.py  slurm.py  transfer_guard.py  worker_oneshot.py  worker_persistent.py
geoxplain_aurora_adapter/schema/: __init__.py  metadata.py  overlay.py  result.py  spec.py  targets.py
geoxplain_aurora_adapter/serving/: __init__.py  bind_security.py  cli_style.py  config.py  listen.py  listener_modes.py  path_options.py  runtime_config.py  setup.py
tests/: test_batch_api.py  test_cli.py  test_client_progress.py  test_overlay_api.py  test_progress.py  test_retention_and_security.py  test_setup_cli.py  test_targets.py  test_weatherbench2_paths.py
